--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20230102184029" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20230104151626" />
   <title>Productly</title>
 </head>
 
@@ -597,7 +597,7 @@
         <form action="" class="sign-up__form">
           <input
             placeholder="Enter your phone Number"
-            type="email"
+            type="tel"
             required
             class="sign-up__input"
           />
@@ -612,6 +612,6 @@
 
     </div>
     
-    <script src="js/app.min.js?_v=20230102184029"></script>
+    <script src="js/app.min.js?_v=20230104151626"></script>
   </body>
 </html>
